# ScoBro-LogBook

./: .gitignore  DEBUG_LOGGING.md  EMERGENCY_LOGGING.md  OAUTH_SETUP.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  SETUP.md  SUPABASE_SETUP.md  check-all-logs.js  check-localStorage-logs.js  clear-logs.js  debug-console.js  env-frontend.example  env.example  index.html  kill-port-5173.bat  package-lock.json  package.json  start-all.bat  start-backend.bat  start-dev.ps1  start.bat  startApp.bat  supabase-schema-part1-tables.sql  supabase-schema-part2-rls.sql  supabase-schema-part3-functions.sql  supabase-schema-part4-indexes.sql  supabase-schema.sql  view-logs.js  vite.config.js
.github/workflows/: build.yml
backend/: README.md  clarizenService.js  clarizen_filtered_results.txt  clarizen_responses.txt  env.example  jiraService.js  package-lock.json  package.json  server.js  start-backend.bat
public/: google-callback.html  microsoft-callback.html
scripts/: create-icon.js  create-icons.js  generate-icons.js  test-phase1.js  test-phase2.js  test-phase3.js
src/: App.jsx  main.jsx  supabaseClient.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  database.rs  main.rs
src/components/: AnalyticsDashboard.jsx  AuthModal.jsx  CalendarSyncModal.jsx  ClarizenApiModal.jsx  Dashboard.jsx  EmailConfigModal.jsx  EntryPopup.jsx  JiraApiModal.jsx  JiraRefInput.jsx  MeetingsManager.jsx  ProjectsManager.jsx  SmartPromptsModal.jsx  StatusPills.jsx  TagsManager.jsx  TimeTrackingModal.jsx  UpdateBanner.jsx
(+15 files in other folders)
