[package]
name = "scobro-logbook"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0-beta", features = ["updater", "notification", "global-shortcut", "tray", "dialog", "fs", "path", "shell"] }
tauri-plugin-updater = "2.0.0-beta"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-tray = "2.0.0-beta"
tauri-plugin-autostart = "2.0.0-beta"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }